--- a/LazyPho/LazyPho.vcxproj
+++ b/LazyPho/LazyPho.vcxproj
@@ -143,6 +143,9 @@
   <ItemGroup>
     <ClCompile Include="source\01_hello_SDL.cpp" />
   </ItemGroup>
+  <ItemGroup>
+    <ClInclude Include="header\Time.h" />
+  </ItemGroup>
   <Import Project="$(VCTargetsPath)\Microsoft.Cpp.targets" />
   <ImportGroup Label="ExtensionTargets">
   </ImportGroup>
