game now renders a bmp

--- a/LazyPho/LazyPho.vcxproj
+++ b/LazyPho/LazyPho.vcxproj
@@ -142,6 +142,7 @@
   </ItemDefinitionGroup>
   <ItemGroup>
     <ClCompile Include="source\01_hello_SDL.cpp" />
+    <ClCompile Include="source\02_getting_an_image_on_the_screen.cpp" />
   </ItemGroup>
   <ItemGroup>
     <ClInclude Include="header\Time.h" />
