--- a/LazyPho/LazyPho.vcxproj.filters
+++ b/LazyPho/LazyPho.vcxproj.filters
@@ -18,6 +18,9 @@
     <ClCompile Include="source\01_hello_SDL.cpp">
       <Filter>Source Files</Filter>
     </ClCompile>
+    <ClCompile Include="source\02_getting_an_image_on_the_screen.cpp">
+      <Filter>Source Files</Filter>
+    </ClCompile>
   </ItemGroup>
   <ItemGroup>
     <ClInclude Include="header\Time.h">
